refactor: clean up tests and remove unused code
- Remove unused Mockito imports and suppressions
- Simplify test assertions and remove redundant braces
- Modernize List access with getFirst()
- Mark entity collection fields as final
- Clean up setUp/tearDown methods