@@ -19,14 +19,8 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
 /**
  * Unit tests for UpdateNodelists.
@@ -89,11 +83,11 @@ class UpdateNodelistsTest {
         updateNodelists.updateNodelists();
 
         verify(s3Utils).putObject(eq(TEST_BUCKET), eq(normalizedName), any(byte[].class));
-        ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked") ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
         verify(kafkaTemplate).send(eq("download_nodelists_is_finished_topic"), kafkaCaptor.capture());
         List<String> sentFiles = kafkaCaptor.getValue();
         assertEquals(1, sentFiles.size());
-        assertEquals(normalizedName, sentFiles.get(0));
+        assertEquals(normalizedName, sentFiles.getFirst());
         verify(ftpClient).close();
     }
 
@@ -139,7 +133,7 @@ class UpdateNodelistsTest {
         updateNodelists.updateNodelists();
 
         verify(s3Utils, times(2)).putObject(anyString(), anyString(), any(byte[].class));
-        ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked") ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
         verify(kafkaTemplate).send(eq("download_nodelists_is_finished_topic"), kafkaCaptor.capture());
         assertEquals(2, kafkaCaptor.getValue().size());
     }
@@ -214,10 +208,10 @@ class UpdateNodelistsTest {
         verify(s3Utils, never()).putObject(eq(TEST_BUCKET), eq(normalizedBad), any(byte[].class));
 
         // Kafka should only receive the good file
-        ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked") ArgumentCaptor<List<String>> kafkaCaptor = ArgumentCaptor.forClass(List.class);
         verify(kafkaTemplate).send(eq("download_nodelists_is_finished_topic"), kafkaCaptor.capture());
         assertEquals(1, kafkaCaptor.getValue().size());
-        assertEquals(normalizedGood, kafkaCaptor.getValue().get(0));
+        assertEquals(normalizedGood, kafkaCaptor.getValue().getFirst());
     }
 
     @Test
